--- a/application/index/view/home/index.html
+++ b/application/index/view/home/index.html
@@ -42,6 +42,16 @@
                     </li >
 
                 </ul>
+                <ul class="sub-menu">
+                    <li>
+                        <a _href="{:url('leaders/agender')}">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>领导日程</cite>
+
+                        </a>
+                    </li >
+
+                </ul>
             </li>
             <li>
                 <a href="javascript:;">
@@ -82,7 +92,7 @@
 <!-- 中部结束 -->
 <!-- 底部开始 -->
 <div class="footer">
-    <div class="copyright">Copyright ©2017 x-admin v2.3 All Rights Reserved</div>
+    <div class="copyright">Copyright ©土豆日程-admin v0.1 All Rights Reserved</div>
 </div>
 <!-- 底部结束 -->
 </body>
