--- a/application/index/view/index/login.html
+++ b/application/index/view/index/login.html
@@ -19,7 +19,7 @@
 <body class="login-bg">
     
     <div class="login layui-anim layui-anim-up">
-        <div class="message">x-admin2.0-管理登录</div>
+        <div class="message">土豆日程-管理登录</div>
         <div id="darkbannerwrap"></div>
         
         <form method="post" class="layui-form" action="{:url('index/check')}" >
